# telegram-style-transfer

./: .gitignore  LICENSE  Makefile  README.md  RESULTS.md  inputs_type1.txt  inputs_type2.txt  outputs_type1.txt  outputs_type2.txt  pyproject.toml  requirements.txt
config/: train.yaml
configs/: data.yaml  env.yaml  train.yaml
docs/: inference.md  pipeline.md  task_description.md
scripts/: build_pilot_manifest.py  build_results.py  estimate_openrouter_cost.py  evaluate.py  evaluate_synthetic_dataset.py  finetune.py  generate.py  generate_baseline.py  generate_openrouter_synthetic.py  memorization_check.py  pilot_openrouter.py  prepare_dataset.py
src/telegram_style_transfer/: __init__.py  data.py  dataset_inputs.py  eval.py  llm_neutralization.py  logging_utils.py  paths.py  prompts.py  synthetic.py
src/telegram_style_transfer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_dataset_inputs.py  test_imports.py  test_llm_neutralization.py  test_synthetic.py
