[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-style-transfer"
version = "0.1.0"
description = "Fine-tuning pipeline for style-transfer-like Telegram post generation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Project Authors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "isort>=5.13.2",
  "pylint>=3.2.6",
  "pre-commit>=3.8.0",
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"
extend-exclude = """
/(
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
"""

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.main]
fail-under = 8.0

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "invalid-name",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
